oxiplate-derive/tests/crates/unreachable/tests/broken/item/unhandled-next-whitespace-preference-tag.stderr
error: Internal Oxiplate error: Unhandled next whitespace adjustment tag
 --> tests/broken/item/unhandled-next-whitespace-preference-tag.rs:4:32
  |
4 | #[oxiplate_inline(r#"{{ "" -}} {$}"#)]
  |                                ^^^
  |
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=Unhandled+next+whitespace+adjustment+tag
  = help: Include template that caused the issue.

error: proc-macro derive panicked
 --> tests/broken/item/unhandled-next-whitespace-preference-tag.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/item/unhandled-next-whitespace-preference-tag.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `Data`
 --> tests/broken/item/unhandled-next-whitespace-preference-tag.rs:5:1
  |
5 | struct Data;
  | ^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
